# website

./: .gitignore  .gitmodules  Makefile  README.md  TODO  TODO.txt  books.yaml  code.markdown  compile.sh  config.yaml  deepakjois-website.cabal  dumphtml.rb  index.html  index.yaml  modd.conf  serve.go  sync.sh  upload.go
_includes/: books_read.html  dirty_ie_hack.html  menu.html
_layouts/: default.html  home.html  inner.html
books/: index.html
code/: index.html
colophon/: index.html
contact/: index.html
css/: style.css
data/: 2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  books.json  books.yaml  books_2010.yaml  books_read.csv  computer-systems.csv
gatsby/: .eslintrc.json  gatsby-config.js  gatsby-node.js  package.json
gatsby-site/: gatsby-config.js  gatsby-node.js  package.json
gatsby-site-v2/: gatsby-node.js  package-lock.json  package.json
gatsby-v2/: gatsby-config.js  gatsby-node.js  package-lock.json  package.json
includes/: analytics.html  nav.html
old/: README.md  deepakjois-website.cabal
online/: index.html
sandbox/: books.html  home.html
sass/: style.scss
scripts/: add_link  papers_csv.rb
source/: About Me.md  About The Site.md  Advertising and Society.md  All Posts.metadata  Ambedkar Reading List for Beginners.md  Analog Data Visualisation – Accounts.md  Book List 2006–2009.md  Coursera Downloader.md  Death in Amsterdam.md  Kiran Ahluwalia’s Tracks.md  Linguistics MOOC Review.md  Mumbai.md  Nehru’s Constituent Assembly Speech.md  Neurodiversity.md  Reading Practical Vim.md  Social Anxiety and Me.md  Sociology.md  Tech Interviewing.md  The Bikers in Berlin.md  Urdu Assignment April 2015.md  book.st  bookmonthly.st  books.markdown  books.txt  books.txt.st  books_archive.txt.st  code.markdown  code.txt  colophon.txt  contact.txt  home.html.st  (+6 more)
(+167 files in other folders)
